fixed some alignment and added curved white background on hero section

--- a/style.css
+++ b/style.css
@@ -13,26 +13,31 @@
   height: 65vh;
 }
 
-.hero-content h1 {
-  width: 70%;
-}
-
-@media (max-width: 992px) {
-  .hero-content > h1 {
-    width: 1200%;
-  }
-}
-
-/* .curved-div {
-  clip-path: ellipse(100% 55% at 48% 100%);
-  background: red;
+.curveArea {
   position: absolute;
-  top: 0;
-  left: 0;
+  bottom: -3rem;
   right: 0;
-  bottom: -7rem;
-  z-index: -1;
-} */
+  left: 0;
+  width: 100%;
+  height: 200px;
+  margin: 0 auto;
+}
+
+.mainBox {
+  height: 100%;
+  overflow: hidden;
+}
+
+.curveSection {
+  width: 200%;
+  height: 100%;
+  border-radius: 100%; /* Increase border-radius for a stronger curve */
+  background: #fff;
+  top: 25%;
+  left: -50%;
+  right: 0;
+  position: relative;
+}
 
 .text-darkblue {
   color: #0f2846;
